--- a/choose.html
+++ b/choose.html
@@ -49,11 +49,11 @@
 
 
 				<div>
-				<font color="white"><a href="#"><input type="button" class="myButton" value="I don't have a flat, I need a flatmate!"></a></font>
+				<font color="white"><a href="noflat.html"><input type="button" class="myButton" value="I don't have a flat, I need a flatmate!"></a></font>
 				</div>
                 <br>
 				<div>
-				<font color="white"><a href="#"><input type="button" class="myButton" value="I have a flat, I need a flatmate!        "></a></font>
+				<font color="white"><a href="flat.html"><input type="button" class="myButton" value="I have a flat, I need a flatmate!        "></a></font>
 				</div>
 				
 
